@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-30T00:55:37Z",
-  "count_outdated" : 940,
-  "uniques_outdated" : 547,
+  "timestamp" : "2025-05-31T00:54:29Z",
+  "count_outdated" : 941,
+  "uniques_outdated" : 548,
   "count" : 948,
   "uniques" : 555,
   "clones" : [
-    {
-      "timestamp": "2025-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-18T00:00:00Z",
       "count": 1,
