@@ -1,3 +1,12 @@
+2025-05-31T00:54:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15358407935 # 660
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-31
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 547 940 / 555 948
+* notice: next accum: outdated-unq outdated-all / unq all: 548 941 / 555 948
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-16] / []
+
 2025-05-30T00:55:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15336724710 # 659
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-30
